fix chat widget mini mode auto height width issue

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style='height: 100%'>
     <head>
         <title><%= productName %></title>
 
@@ -38,8 +38,8 @@
         />
         <link rel="icon" type="image/ico" href="favicon.ico" />
     </head>
-    <body>
+    <body class='tw-flex tw-flex-col tw-h-full'>
         <!-- DO NOT touch the following DIV -->
-        <div id="q-app"></div>
+        <div id="q-app" class='tw-h-full'></div>
     </body>
 </html>
